--- a/src/pages/Tables/style.module.scss
+++ b/src/pages/Tables/style.module.scss
@@ -69,7 +69,8 @@ $SIZE: 40px;
   height: 50px;
   width: fit-content;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  gap: 20px;
 }
