--- a/src/pages/Gestures/style.module.scss
+++ b/src/pages/Gestures/style.module.scss
@@ -36,6 +36,10 @@
   width: 40px;
   height: 40px;
   font-size: 25px;
+  font-weight: 300;
+  &_active {
+    font-weight: 700;
+  }
 }
 
 .field {
