--- a/src/pages/Gestures/style.module.scss
+++ b/src/pages/Gestures/style.module.scss
@@ -33,7 +33,8 @@
   }
 }
 .btn {
-  width: 40px;
+  min-width: 40px;
+  width: fit-content;
   height: 40px;
   font-size: 25px;
   font-weight: 300;
